# libsearpc

./: .gitignore  CMakeLists.txt  NOTICE.txt  pyproject.toml
demo/: CMakeLists.txt
lib/: CMakeLists.txt  searpc-codegen.py
pysearpc/: CMakeLists.txt
tests/: CMakeLists.txt
